Header stretch fix

--- a/dev/2012/summer/home/home.css
+++ b/dev/2012/summer/home/home.css
@@ -40,7 +40,6 @@ body,
 	
 	#header, #header .row, #header .span12, #header .span12 .row {
 		width: 100%;
-		margin-left: 0;
 	}
 	.row {
 		width: 93%;
